// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <TabHeader
    alm="azure"
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={true}
    timeout={100}
  >
    <AzureTable
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <TabHeader
    alm="azure"
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AzureTable
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</Fragment>
`;

exports[`should render correctly 3`] = `
<Fragment>
  <TabHeader
    alm="azure"
    onCreate={[MockFunction]}
  />
  <DeferredSpinner
    loading={false}
    timeout={100}
  >
    <AzureTable
      definitions={Array []}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
  <AlmPRDecorationFormModal
    bindingDefinition={
      Object {
        "key": "key",
        "personalAccessToken": "asdf1234",
      }
    }
    onCancel={[MockFunction]}
    onSubmit={[MockFunction]}
  >
    <Component />
  </AlmPRDecorationFormModal>
</Fragment>
`;
